prevent layout shift due to next-route-announcer

--- a/src/app/(pages)/layout.module.scss
+++ b/src/app/(pages)/layout.module.scss
@@ -1,9 +1,8 @@
 @import "@/styles/main";
 
 .body {
+  min-height: 100dvh;
   display: flex;
   flex-direction: column;
-  min-height: 100dvh;
   padding: $spacing-m;
-  row-gap: $spacing-m;
 }
