--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,6 +5,7 @@
   justify-content: flex-end;
   column-gap: $spacing-m;
   width: 100%;
+  margin-bottom: $spacing-l;
 
   .icon {
     transition: $transition-default;
